Update single-product copy - 6.html

--- a/single-product copy - 6.html
+++ b/single-product copy - 6.html
@@ -121,7 +121,7 @@ https://www.tooplate.com/view/2114-pixie
               <h4>Single Product Name</h4>
               <h6>$55.00</h6>
               <p>Proin commodo, diam a ultricies sagittis, erat odio rhoncus metus, eu feugiat lorem lacus aliquet arcu. Curabitur in gravida nisi, non placerat nibh. Praesent sit amet diam ultrices, commodo turpis id, dignissim leo. Suspendisse mauris massa, porttitor non fermentum vel, ullamcorper scelerisque velit. </p>
-              <span>7 left on stock</span>
+              <span>Sold out</span>
               <form action="" method="get">
                 <label for="quantity">Quantity:</label>
                 <input name="quantity" type="quantity" class="quantity-text" id="quantity" 
@@ -142,7 +142,7 @@ https://www.tooplate.com/view/2114-pixie
           </div>
         </div>
       </div>
-    </div>
+    </div>ní
     <!-- Single Page Ends Here -->
 
 
